--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -6,5 +6,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>Page2.qml</file>
         <file>Page2Form.ui.qml</file>
+        <file>ProgressCircle.qml</file>
     </qresource>
 </RCC>
