--- a/src/img.qrc
+++ b/src/img.qrc
@@ -1,7 +1,3 @@
 <RCC>
-    <qresource prefix="/img">
-        <file>star_gold.svg</file>
-        <file>star_silver.svg</file>
-        <file>happy-sun-gm.svg</file>
-    </qresource>
+    <qresource prefix="/img"/>
 </RCC>
